rest of site online

--- a/views/index.html
+++ b/views/index.html
@@ -33,7 +33,7 @@
       </g>
       </svg>
     </a>
-    <a class="close-button close-case" href="<?php echo ROOT ?>">
+    <a class="close-button close-case" href="#">
       <span>CLOSE CASE STUDY</span>
       <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
          width="40px" height="40px" viewBox="0 0 40 40" enable-background="new 0 0 40 40" xml:space="preserve">
@@ -52,7 +52,7 @@
 </article>
 
 <body class="work">
-<?php include('includes/nav.php'); ?>
+  {{>nav}}
   <section id="work" class="page">
 
   <div class="header">
@@ -91,109 +91,109 @@
   <div class="content">
     <div class="gridholder work-holder">
       <div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/sauder.png')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/sauder.png')">
           <figcaption>
-            <a class="case-link" href="work/sauder">
+            <a class="case-link" href="/sauder">
               <h2>Sauder School of Business</h2>
               <p>Web Strategy, Design, Development, Promotion, Print</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/appannie.jpg')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/appannie.jpg')">
           <figcaption>
-            <a class="case-link" href="work/appannie">
+            <a class="case-link" href="/appannie">
               <h2>App Annie</h2>
               <p>Branding, Content Marketing, Campaigns</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/eubc.jpg')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/eubc.jpg')">
 
           <figcaption>
-            <a class="case-link" href="work/eubc">
+            <a class="case-link" href="/eubc">
               <h2>Entrepreneurship@UBC</h2>
               <p>Web Strategy, Design, Wordpress</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/duohelica.png')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/duohelica.png')">
           <figcaption>
-            <a class="case-link" href="work/duohelica">
+            <a class="case-link" href="/duohelica">
               <h2>Duohelica</h2>
               <p>Branding, Concept, Promotion</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/moappi.jpg')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/moappi.jpg')">
           <figcaption>
-            <a class="case-link" href="work/moappi">
+            <a class="case-link" href="/moappi">
               <h2>Moappi</h2>
               <p>Branding, Product Design, Promotion</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/fidelity.jpg')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/fidelity.jpg')">
           <figcaption>
-            <a class="case-link" href="work/fidelity">
+            <a class="case-link" href="/fidelity">
               <h2>Fidelity Denim</h2>
               <p>Design, Development, Web Strategy</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/abigaila.jpg')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/abigaila.jpg')">
           <figcaption>
-            <a class="case-link" href="work/abigaila">
+            <a class="case-link" href="/abigaila">
               <h2>Abigaila</h2>
               <p>Branding, Product Design, Concept, Promotion</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/suncentral.jpg')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/suncentral.jpg')">
           <figcaption>
-            <a class="case-link" href="work/suncentral">
+            <a class="case-link" href="/suncentral">
               <h2>SunCentral</h2>
               <p>Print, Documentation, Technical Illustration</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/ideahack.jpg')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/ideahack.jpg')">
           <figcaption>
-            <a class="case-link" href="work/ideahack">
+            <a class="case-link" href="/ideahack">
               <h2>Ideahack Creative</h2>
               <p>Everything (co-founder)</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/clearink.jpg')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/clearink.jpg')">
           <figcaption>
-            <a class="case-link" href="work/clearink">
+            <a class="case-link" href="/clearink">
               <h2>Clearink Displays</h2>
               <p>Branding, Technical Illustration</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/silverLine.png')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/silverLine.png')">
           <figcaption>
-            <a class="case-link" href="work/silverline">
+            <a class="case-link" href="/silverline">
               <h2>SilverLine Exteriors</h2>
               <p>Branding, Web Strategy</p>
             </a>
           </figcaption>
         </figure>
       </div><div class="grid">
-        <figure class="work-item un-entered" style="background-image: url('img/ubcfc.png')">
+        <figure class="work-item un-entered" style="background-image: url('../static/images/ubcfc.png')">
           <figcaption>
-            <a class="case-link" href="work/ubcfc">
+            <a class="case-link" href="/ubcfc">
               <h2>UBC Finance Club</h2>
               <p>Branding, Marketing</p>
             </a>
@@ -237,7 +237,7 @@
   <div class="content">
     <div class="grid half">
       <div id="about-visual-holder" class="lt-480-hide unresolved ani slow">
-        <img src="img/brains.svg">
+        <img src="../static/images/brains.svg">
         <span>
         I have a natural right brain
         and a <u class="hover-pop" href="#">well-trained<div id="pop-in" class="ani">B.ASc Environmental Engineering, 2011, UBC</div></u> left brain
@@ -317,10 +317,10 @@
   </div>
   <div class="content">
     <div class="hack-content">
-      <div class="grid two-third hack-item ani"><h2>Locksmasher</h2><span>Facebook University Hackathon 2012</span><p>We created a facebook app that consisted of a node.js server, an arduino microcontroller, and a laser printer motor connected to a door lock. The setup was configured to allow remote unlocking of a door through a facebook account.</p><a class="github-link" href="https://github.com/cvince/locksmasher" target="_blank"><img src="img/github_unhovered.png"></a></div>
+      <div class="grid two-third hack-item ani"><h2>Locksmasher</h2><span>Facebook University Hackathon 2012</span><p>We created a facebook app that consisted of a node.js server, an arduino microcontroller, and a laser printer motor connected to a door lock. The setup was configured to allow remote unlocking of a door through a facebook account.</p><a class="github-link" href="https://github.com/cvince/locksmasher" target="_blank"><img src="../static/images/github_unhovered.png"></a></div>
       <div class="grid two-third hack-item ani"><h2>SchoolZone</h2><span>Vancouver Open-Data Hackathon</span><p>We created an open data app using Google Maps API, and the open "hazardous intersection" data from the Insurance Corporation of BC in order to create a mapping app that helps users pinpoint the most dangerous intersections around their neighborhoods</p><a class="hack-link" href="http://schoolzone.moappi.com">Go To App</a></div>
-      <div class="grid two-third hack-item ani"><h2>iSnooze</h2><span>Mozilla Mobile Hackathon 2012</span><p>We created an alarm clock that plays Rebecca Black's "Friday" at a set time, and forces users to pay a charity $0.99 for snoozing their alarm. We didn't get the charity part working, but we did get the alarm clock's ringer and snooze functionality done for demo.</p><a class="github-link" href="https://github.com/cvince/locksmasher" target="_blank"><img src="img/github_unhovered.png"></a></div>
-      <div class="grid two-third hack-item ani"><h2>Febble</h2><span>Official Facebook Hackathon 2012</span><p>Our project for the hackathon at Facebook HQ incorporated a watch that could sync up with Facebook and allow you to dismiss pokes in real-time. The watch was connected to a laptop via USB, and consisted of an Arduino Micro.</p><a class="github-link" href="https://github.com/cvince/febble" target="_blank"><img src="img/github_unhovered.png"></a></div>
+      <div class="grid two-third hack-item ani"><h2>iSnooze</h2><span>Mozilla Mobile Hackathon 2012</span><p>We created an alarm clock that plays Rebecca Black's "Friday" at a set time, and forces users to pay a charity $0.99 for snoozing their alarm. We didn't get the charity part working, but we did get the alarm clock's ringer and snooze functionality done for demo.</p><a class="github-link" href="https://github.com/cvince/locksmasher" target="_blank"><img src="../static/images/github_unhovered.png"></a></div>
+      <div class="grid two-third hack-item ani"><h2>Febble</h2><span>Official Facebook Hackathon 2012</span><p>Our project for the hackathon at Facebook HQ incorporated a watch that could sync up with Facebook and allow you to dismiss pokes in real-time. The watch was connected to a laptop via USB, and consisted of an Arduino Micro.</p><a class="github-link" href="https://github.com/cvince/febble" target="_blank"><img src="../static/images/github_unhovered.png"></a></div>
     </div>
     <div class="clear"></div>
   </div>
